alteração email recebido

--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@ Subject: 👏🏻👏🏻 Recebemos sua solicitação de pagamento!
                 <table style="width: 100%; max-width: 600px; background-color: #fff; border-radius: 0;">
                     <tr>
                         <td style="padding: 0px 24px 32px 24px; text-align: center;">
-                            <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;"><b>Recebemos com sucesso&#32;</b> a sua solicitação do pagamento.</p>
+                            <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;"><b>Recebemos com sucesso&#32;</b> a sua solicitação de pagamento.</p>
                             <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;">Nós poderemos entrar em contato com você para verificar alguns dados. Esse é um procedimento padrão que visa manter a segurança do seu pagamento. Portanto, fique atento ao seu telefone!</p>
                             <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;">Assim que tivermos novidades, avisaremos você por aqui.</p>
                         </td>
