--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@ Subject: ⌛ Seu pagamento está em processamento!
                 <table style="width: 100%; max-width: 600px; background-color: #fff; border-radius: 0;">
                     <tr>
                         <td style="padding: 0px 24px 32px 24px; text-align: center;">
-                            <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;">Seu pagamento está em processamento. Assim que for confirmado e o valor enviado ao beneficiário, encaminharemos o comprovante individual de pagamento para você.</p>
+                            <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;">Seu pagamento está em processamento. Assim que for confirmado e o valor enviado ao beneficiário, encaminharemos o comprovante individual para você.</p>
                             <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;">Ficamos muito felizes em ter você aqui conosco. Muito obrigado pela confiança!</p>
                         </td>
                     </tr>
