--- a/index.html
+++ b/index.html
@@ -1419,7 +1419,7 @@ Subject: 😔❌ Que pena! Seu pagamento foi negado!
                     <tr>
                         <td style="padding: 0px 24px 32px 24px; text-align: center;">
                             <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;">Que pena! Não conseguimos aprovar seu pagamento desta vez! Mas não se preocupe, já solicitamos a devolução do valor para seu banco. Por isso, é importante você verificar com a administradora do seu cartão qual o prazo para o crédito entrar na fatura. Cada instituição possui um tempo próprio.</p>
-                            <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;">Mas não desanime! Estamos aqui para tirar quaisquer dúvidas sobre o seu pagamento. Acesse sua conta clicando no botão abaixo.</p>
+                            <p style="margin: 16px 0; font-size: 16px; color: #60657B; line-height: 24px;">Mas não desanime! Estamos aqui para tirar quaisquer dúvidas sobre o seu pagamento. Acesse sua conta clicando no botão abaixo:</p>
                             <a style="font-size: 16px; line-height: 46px; display: inline-flex; align-items: center; justify-content: center; background-color: #5619b4; padding: 0 32px; height: 48px; color: #fff; text-decoration: none; border-radius: 4px; font-weight: 500; margin: 16px 0;" href="https://pagar.vamosparcelar.com.br/access/login">Acessar conta</a>
                         </td>
                     </tr>
